--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aman Singh - Full Stack Developer Portfolio</title>
+  <title>Aman Singh - Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
@@ -1289,7 +1289,7 @@
           </div>
         </div>
         <div class="about-image">
-          <img src="https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Aman working on laptop">
+          <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj0lOiWy_Txi5KpuPkcFBfWm3EJeIlFzkctz5D08FxuFQHek2NsA5_fp446OEPec49to6oyM1CuztUaXO4UPAU1Dx_lA_RKCyT92643syQTBTIyOfBw5BfUf7M8f0RdsMD2U95E82L_z1ik6yaj02jAdEQRrD037bU8iHmaP7WFjOxJuP_af4_TbX61Bfs/s1600/photo_2025-06-29_19-38-29.jpg" alt="Aman working on laptop">
         </div>
       </div>
     </section>
