--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
   <!-- Hero Section -->
   <header>
     <div class="header-content container">
-      <img src="https://i.pravatar.cc/180?img=5" alt="Aman Singh" class="profile-img">
+      <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj0lOiWy_Txi5KpuPkcFBfWm3EJeIlFzkctz5D08FxuFQHek2NsA5_fp446OEPec49to6oyM1CuztUaXO4UPAU1Dx_lA_RKCyT92643syQTBTIyOfBw5BfUf7M8f0RdsMD2U95E82L_z1ik6yaj02jAdEQRrD037bU8iHmaP7WFjOxJuP_af4_TbX61Bfs/s1600/photo_2025-06-29_19-38-29.jpg" alt="Aman Singh" class="profile-img">
       <h1 class="title">Aman Singh</h1>
       <p class="subtitle">Full Stack Developer & Content Creator</p>
       <div class="social-links">
