--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@
           </div>
         </div>
         <div class="about-image">
-          <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj0lOiWy_Txi5KpuPkcFBfWm3EJeIlFzkctz5D08FxuFQHek2NsA5_fp446OEPec49to6oyM1CuztUaXO4UPAU1Dx_lA_RKCyT92643syQTBTIyOfBw5BfUf7M8f0RdsMD2U95E82L_z1ik6yaj02jAdEQRrD037bU8iHmaP7WFjOxJuP_af4_TbX61Bfs/s1600/photo_2025-06-29_19-38-29.jpg" alt="Aman working on laptop">
+          <img src="https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Aman working on laptop">
         </div>
       </div>
     </section>
