--- a/index.html
+++ b/index.html
@@ -1258,8 +1258,8 @@
         <a href="https://youtube.com/aman" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
       </div>
       <div class="cta-buttons">
-        <a href="#contact" class="btn btn-primary">
-          <i class="fas fa-paper-plane"></i> Contact Me
+        <a href="file.html" class="btn btn-primary">
+          <i class="fas fa-paper-plane"></i> Create Link
         </a>
         <a href="#projects" class="btn btn-outline">
           <i class="fas fa-code"></i> View Projects
