--- a/index.html
+++ b/index.html
@@ -1422,10 +1422,10 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "BYAMN Festhub",
-      "url": "https://byamn-festhub.com",
+      "url": "https://dyhardx.vercel.app",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://byamn-festhub.com/search?q={search_term_string}",
+        "target": "https://dyhardx.vercel.app/search?q={search_term_string}",
         "query-input": "required name=search_term_string"
       },
       "description": "Create and share beautiful festival wishes for Diwali, Eid, Christmas, Holi and more. Custom greeting cards for all occasions.",
@@ -1434,7 +1434,7 @@
         "name": "BYAMN Festhub",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://byamn-festhub.com/logo.png"
+          "url": "https://dyhardx.vercel.app/logo.png"
         }
       }
     }
