--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
                 <div class="featured-content">
                     <h3 class="featured-title">Create Link Shortner and Earn </h3>
                     <p class="featured-description">BYAMN Festhub's Link Shortener lets you create short, shareable links in seconds and start earning from every click. Perfect for bloggers, students, and marketers, our tool is fast, secure, and easy to use. Track link performance in real time and boost your online income effortlessly.</p>
-                    <a href="#" class="btn btn-hindu">
+                    <a href="file.html" class="btn btn-hindu">
                         Try Create Link <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
