--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="canonical" href="https://byamn.vercel.app/">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="/logo.png">
     
     <!-- Preconnect to important domains -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
