--- a/index.html
+++ b/index.html
@@ -1568,7 +1568,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX'); // Replace with your GA4 ID
+        gtag('config', 'G-LHQ34PSHTY'); // Replace with your GA4 ID
     </script>
 </body>
 </html>
