--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,7 @@
                 <div class="step">
                     <div class="step-number">2</div>
                     <h3 class="step-title">Customize Your Design</h3>
-                    <p class="step-description">Add personal photos, change colors, and write your custom message to make it unique.</p>
+                    <p class="step-description">Add festival, and write your custom Name to make it unique.</p>
                 </div>
                 <div class="step">
                     <div class="step-number">3</div>
