--- a/index.html
+++ b/index.html
@@ -1634,7 +1634,7 @@
                 title: "Govardhan Puja",
                 description: "Celebrated on 22 October (Wednesday) honoring Lord Krishna's lifting of Govardhan Hill.",
                 category: "hindu",
-                image: "https://images.unsplash.com/photo-1513151233558-d860c5398176?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80",
+                image: https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.herzindagi.com%2Fhindi%2Fsociety-culture%2Fgovardhan-puja-wishes-quotes-messages-images-to-celebrate-this-day-article-1006122&psig=AOvVaw1ZD4lGlJl3QWA2WNYX73Rn&ust=1756128061364000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCJiJoP7Eo48DFQAAAAAdAAAAABAE
                 views: "8.4K",
                 link: "#"
             },
