--- a/index.html
+++ b/index.html
@@ -1634,7 +1634,7 @@
                 title: "Govardhan Puja",
                 description: "Celebrated on 22 October (Wednesday) honoring Lord Krishna's lifting of Govardhan Hill.",
                 category: "hindu",
-                image: "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.herzindagi.com%2Fhindi%2Fsociety-culture%2Fgovardhan-puja-wishes-quotes-messages-images-to-celebrate-this-day-article-1006122&psig=AOvVaw1ZD4lGlJl3QWA2WNYX73Rn&ust=1756128061364000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCJiJoP7Eo48DFQAAAAAdAAAAABAE.",
+                image: "https://media.assettype.com/outlookindia/2024-10-14/r2wmo26k/Picture1.png?w=600&auto=format%2Ccompress&fit=max&format=webp&dpr=1.0",
                 views: "8.4K",
                 link: "#"
             },
