--- a/index.html
+++ b/index.html
@@ -1857,21 +1857,31 @@
     
     <main class="container">
         <!-- Search Section -->
-        <section class="search-section" aria-label="Search festival wishes">
-            <div class="search-container">
-            <input type="text" class="search-input" placeholder="Search for Diwali, Eid, Christmas wishes..." id="searchInput" aria-label="Search festival wishes">
-            <button class="search-btn" id="searchBtn" aria-label="Search">
-                <i class="fas fa-search"></i>
-            </button>
-            </div>
-            <!-- Back to Home Button (visible after search) -->
-            <div style="display: flex; align-items: center; gap: 1rem; margin-top: 1rem;"></div>
-                <button id="backHomeBtn" style="display:none; padding:0.7rem 1.5rem; border-radius:8px; background:var(--primary); color:white; border:none; font-weight:500; cursor:pointer; box-shadow:0 2px 8px rgba(139,92,246,0.08);">
-                    <i class="fas fa-arrow-left"></i> Back
-                </button>
-            </div>
-        </section>
-        
+  <section class="search-section" aria-label="Search festival wishes">
+  <div class="search-container">
+    <input 
+      type="text" 
+      class="search-input" 
+      placeholder="Search for Diwali, Eid, Christmas wishes..." 
+      id="searchInput" 
+      aria-label="Search festival wishes"
+    >
+    <button class="search-btn" id="searchBtn" aria-label="Search">
+      <i class="fas fa-search"></i>
+    </button>
+  </div>
+
+  <!-- Back to Home Button (visible after search) -->
+  <div style="display: flex; align-items: center; gap: 1rem; margin-top: 1rem;">
+    <button 
+      id="backHomeBtn" 
+      style="display:none; padding:0.7rem 1.5rem; border-radius:8px; background:var(--primary); color:white; border:none; font-weight:500; cursor:pointer; box-shadow:0 2px 8px rgba(139,92,246,0.08);"
+    >
+      <i class="fas fa-arrow-left"></i> Back
+    </button>
+  </div>
+</section>
+
         <!-- Categories Section -->
         <section class="categories-section" aria-labelledby="categories-heading">
             <h2 id="categories-heading" class="section-title">Browse Festival Categories</h2>
